--- a/src/main/resources/templates/musicList/editMusicListForm.html
+++ b/src/main/resources/templates/musicList/editMusicListForm.html
@@ -10,13 +10,13 @@
 </style>
 <div style="height: 1000px; margin-top: 20px">
     <form class="w-50 container" enctype="multipart/form-data"
-          method="post" action="/updateMusicListComplete" id="addForm" onsubmit="return updateSubmit()"
-          th:object="${musicListFormDto}">
+          method="post" th:action="@{/EditMusicList}" onsubmit="return updateSubmit()"
+          th:object="${updateMusicListFormDto}">
 
         <label style="margin-top: 10px" for="title" class="form-label">제목 입력하세요</label>
         <label class="field-error" style="margin-left: 200px"
                th:if="${errors?.containsKey('title')}" th:text="${errors['title']}">오류메세지</label>
-        <input type="text" class="form-control" id="title" name="title" th:field="*{title}"placeholder="제목">
+        <input type="text" class="form-control" id="title" name="title" th:field="*{title}" placeholder="제목">
         <label style="margin-top: 10px" class="form-label">악기타입 입력하세요</label>
         <label class="field-error" style="margin-left: 200px"
                th:if="${errors?.containsKey('type')}" th:text="${errors['type']}">오류메세지</label>
@@ -47,15 +47,17 @@
 
         <label style="margin-top: 10px" class="form-label">pdf 악보 올리기</label>
         <div>
-            <table class="table table-bordered">
+            <table class="table table-bordered" id="fileTable">
                 <tr>
                     <td>파일명</td>
                     <td>삭제</td>
                 </tr>
-                <tbody >
-                <tr th:each="fileList : ${fileList}">
+                <tbody>
+                <tr th:each="fileList : ${fileList}" style="color: brown; text-decoration: underline; !important;">
                     <td th:text="${fileList.originalFilename}"></td>
-                    <td><button class="btn-primary">삭제</button></td>
+                    <td>
+                        <button type="button" class="btn-primary" onclick="remove_tr(this)">삭제</button>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -73,14 +75,14 @@
 
         <div class="text-center" style="margin-top: 30px">
             <button type="submit" class="btn btn-primary mb-3"
-                    th:name="musicListId" th:value="${musicList.id}">수정하기</button>
+                    th:name="musicListId" th:value="${musicListId}">수정하기
+            </button>
             <a href="/" class="btn btn-primary mb-3">취소</a>
         </div>
 
     </form>
 
 </div>
-
 <script>
     function updateSubmit() {
         if (confirm("등록하시겠습니까")) {
@@ -89,11 +91,14 @@
             return false;
         }
     }
+
+    function remove_tr(This){
+        if (confirm("삭제하시겠습니까")){
+            This.closest('tr').remove();
+        }
+
+
+    }
 </script>
-
-
-</div>
-
-<div th:replace="~{fragments/footer :: footer}"/>
 
 </html>
