파일 수정 구현중

--- a/src/main/resources/templates/musicList/addMusicListForm.html
+++ b/src/main/resources/templates/musicList/addMusicListForm.html
@@ -49,7 +49,7 @@
         <input class="form-control" type="file" multiple="multiple" id="pdfFiles" name="pdfFiles">
 
         <label style="margin-top: 10px" class="form-label">내용을 입력하세요</label>
-        <textarea class="form-control" id="content" name="content" rows="15"
+        <textarea class="form-control" id="content" name="content" rows="12"
                   th:field="*{content}"></textarea>
         <label for="content" class="text-start field-error"></label>
 
@@ -72,5 +72,5 @@
         }
     }
 </script>
-
+<div th:replace="~{fragments/footer :: footer}"/>
 </html>
