--- a/src/main/resources/templates/musicList/buyCompleteForm.html
+++ b/src/main/resources/templates/musicList/buyCompleteForm.html
@@ -6,6 +6,6 @@
 <div class="container" style="margin-top: 20px; height: 1000px" >
     <h1>구매 성공 </h1>
 </div>
-
+<div th:replace="~{fragments/footer :: footer}"/>
 
 </html>
