--- a/src/main/resources/templates/musicList/editMusicListForm.html
+++ b/src/main/resources/templates/musicList/editMusicListForm.html
@@ -10,7 +10,7 @@
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <div style="height: 1000px; margin-top: 20px">
-    <form class="w-50 container" enctype="multipart/form-data"
+    <form id="formId" class="w-50 container" enctype="multipart/form-data"
           method="post" th:action="@{/EditMusicList}" onsubmit="return updateSubmit()"
           th:object="${updateMusicListFormDto}">
 
@@ -55,20 +55,14 @@
                 <tr th:each="fileList : ${fileList}" style="color: brown; text-decoration: underline; !important;">
                     <td id="id" th:text="${fileList.originalFilename}"></td>
                     <td>
-                        <button type="button" class="edit" th:class="btn-primary" onclick="remove_tr(this)" >삭제</button>
+                        <button type="button" class="edit" th:class="btn-primary" onclick="remove_tr(this)">삭제</button>
                     </td>
                 </tr>
             </table>
 
         </div>
-
-
-
-
-
-            <input style="margin-top: 20px" class="form-control" type="file" multiple="multiple" id="pdfFiles" name="pdfFiles">
-
-
+        <input style="margin-top: 20px" class="form-control" type="file" multiple="multiple" id="pdfFiles"
+               name="pdfFiles">
 
         <label style="margin-top: 10px" class="form-label">내용을 입력하세요</label>
         <textarea class="form-control" id="content" name="content" rows="10"
@@ -95,16 +89,23 @@
         }
     }
 
-    function remove_tr(obj){
+    function remove_tr(obj) {
 
         const row = $(obj).parent().parent().get(0);
         const td = row.cells[0];
         const value = $(td).text();
-
-        if (confirm(value)){
-           obj.closest('tr').remove();
+;
+        if (confirm(value+"삭제하시겟습니까")) {
+            const formData = document.getElementById("formId");
+            const input = document.createElement('input');
+            input.type = "hidden"
+            input.name = "filename";
+            input.value = value;
+            formData.appendChild(input);
+            obj.closest('tr').remove();
         }
     }
+
 </script>
 <div th:replace="~{fragments/footer :: footer}"/>
 </html>
