구매리스트 구현

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,11 +21,11 @@
                 <li><a th:if="${htmlName == 'addItem'}" href="/addMusicList" class="nav-link px-5 text-info">악보등록</a>
                 <li><a th:if="${htmlName != 'addItem'}" href="/addMusicList" class="nav-link px-5 text-white">악보등록</a>
 
-                <li><a th:if="${htmlName == 'sellList'}" href="/sellList" class="nav-link px-5 text-info">구매목록</a>
-                <li><a th:if="${htmlName != 'sellList'}" href="/sellList" class="nav-link px-5 text-white">구매목록</a>
+                <li><a th:if="${htmlName == 'buyList'}" href="/buyList" class="nav-link px-5 text-info">구매목록</a>
+                <li><a th:if="${htmlName != 'buyList'}" href="/buyList" class="nav-link px-5 text-white">구매목록</a>
 
-                <li><a th:if="${htmlName == 'buyList'}" href="/buyList" class="nav-link px-5 text-info">판매목록</a>
-                <li><a th:if="${htmlName != 'buyList'}" href="/buyList" class="nav-link px-5 text-white">판매목록</a>
+                <li><a th:if="${htmlName == 'sellList'}" href="/sellList" class="nav-link px-5 text-info">판매목록</a>
+                <li><a th:if="${htmlName != 'sellList'}" href="/sellList" class="nav-link px-5 text-white">판매목록</a>
 
                 <li><a th:if="${htmlName == 'myInfo'}" href="/myInfo" class="nav-link px-5 text-info">내정보</a>
                 <li><a th:if="${htmlName != 'myInfo'}" href="/myInfo" class="nav-link px-5 text-white">내정보</a>
