--- a/src/main/resources/templates/login/myInfoForm.html
+++ b/src/main/resources/templates/login/myInfoForm.html
@@ -7,8 +7,10 @@
 
     <ul style="font-size: large" th:if="${member}">
         <li>보유 캐시 <p th:text="${member.cash}"></p></li>
+        <li>총 판매금액 <p th:text="${member.revenue}"></p></li>
         <li>아이디 <p th:text="${member.loginId}"></p></li>
         <li>닉네임 <p th:text="${member.nickname}"></p></li>
+
     </ul>
 
     <button class="btn btn-lg btn-primary" onclick="btnClick()">가상머니충전</button>
