--- a/src/main/resources/templates/musicList/editMusicListForm.html
+++ b/src/main/resources/templates/musicList/editMusicListForm.html
@@ -81,7 +81,7 @@
     </form>
 
 </div>
-<script type="text/javascript">
+<script>
     function updateSubmit() {
         if (confirm("등록하시겠습니까")) {
             return true;
