--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,7 +30,7 @@
             </div>
         </form>
 
-        <div style="height: 700px">
+        <div style="max-height: 700px; min-height: 700px; overflow: scroll;">
             <table class="table table-striped table-bordered">
                 <thead>
                 <tr>
@@ -43,63 +43,64 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr class="table_row_color" th:each="musicList, loop : ${paging}">
-                    <td th:text="${musicList.id}"></td>
-                    <td th:text="${musicList.title}" class="table_title_fontcolor"
+                <tr class="table_row_color" th:each="musicList : ${paging}">
+                    <td style="width: 10%" th:text="${musicList.id}"></td>
+                    <td style="width: 50%" th:text="${musicList.title}" class="table_title_fontcolor"
                         th:onclick="|location.href='@{/content (musicListId=${musicList.id}) }'|"></td>
                     <td th:text="${musicList.memberNickname}"></td>
-                    <td th:text="${musicList.type}"></td>
-                    <td th:text="${musicList.level}"></td>
-                    <td th:text="${musicList.price}"></td>
+                    <td style="width: 8%" th:text="${musicList.type}"></td>
+                    <td style="width: 8%" th:text="${musicList.level}"></td>
+                    <td style="width: 8%" th:text="${musicList.price}"></td>
                 </tr>
                 </tbody>
             </table>
         </div>
 
-        <ul class="pagination justify-content-center">
-            <li class="page-item" th:if="${start==0}">
-                <a class="page-link" th:href="@{|?page=${start}|}"> << </a>
-            </li>
-            <li class="page-item" th:if="${start!=0}">
-                <a class="page-link" th:href="@{|?page=${start -1}|}"> << </a>
-            </li>
-            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
-                <a class="page-link" th:href="@{|?page=${paging.number -1}|}"> < </a>
-            </li>
-            <li class="page-item" th:classappend="${page == paging.number} ? 'active'"
-                th:each="page : ${#numbers.sequence(start, end)}">
-                <a class="page-link" th:text="${page+1}" th:href="@{|?page=${page}|}"></a>
-            </li>
-            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
-                <a class="page-link" th:href="@{|?page=${paging.number+1}|}"> > </a>
-            </li>
-            <li class="page-item" th:if="${paging.getTotalPages() - start < 8}">
-                <a class="page-link" th:href="@{|?page=${paging.getTotalPages() -1}|}"> >> </a>
-            </li>
-            <li class="page-item" th:if="${paging.getTotalPages() - start > 8}">
-                <a class="page-link" th:href="@{|?page=${start+7}|}"> >> </a>
-            </li>
-        </ul>
-
-        <form class="row g-2 justify-content-center" style="margin-bottom: 154px">
-            <div class="col-auto">
-                <select class="form-select">
-                    <option selected>제목검색</option>
-                    <option>글작성자</option>
-                </select>
-            </div>
-            <div class="col-3">
-                <input type="search" class="form-control" placeholder="악보를 검색하세요" aria-label="Search">
-            </div>
-
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">확인</button>
-            </div>
-        </form>
     </div>
 
 </div>
 
+
+<ul class="pagination justify-content-center">
+    <li class="page-item" th:if="${start==0}">
+        <a class="page-link" th:href="@{|?page=${start}|}"> << </a>
+    </li>
+    <li class="page-item" th:if="${start!=0}">
+        <a class="page-link" th:href="@{|?page=${start -1}|}"> << </a>
+    </li>
+    <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+        <a class="page-link" th:href="@{|?page=${paging.number -1}|}"> < </a>
+    </li>
+    <li class="page-item" th:classappend="${page == paging.number} ? 'active'"
+        th:each="page : ${#numbers.sequence(start, end)}">
+        <a class="page-link" th:text="${page+1}" th:href="@{|?page=${page}|}"></a>
+    </li>
+    <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+        <a class="page-link" th:href="@{|?page=${paging.number+1}|}"> > </a>
+    </li>
+    <li class="page-item" th:if="${paging.getTotalPages() - start < 8}">
+        <a class="page-link" th:href="@{|?page=${paging.getTotalPages() -1}|}"> >> </a>
+    </li>
+    <li class="page-item" th:if="${paging.getTotalPages() - start > 8}">
+        <a class="page-link" th:href="@{|?page=${start+7}|}"> >> </a>
+    </li>
+</ul>
+
+<form class="row g-2 justify-content-center" style="margin-bottom: 154px">
+    <div class="col-auto">
+        <select class="form-select">
+            <option selected>제목검색</option>
+            <option>글작성자</option>
+        </select>
+    </div>
+    <div class="col-3">
+        <input type="search" class="form-control" placeholder="악보를 검색하세요" aria-label="Search">
+    </div>
+
+    <div class="col-auto">
+        <button type="submit" class="btn btn-primary mb-3">확인</button>
+    </div>
+</form>
 </body>
 <div th:replace="~{fragments/footer :: footer}"/>
 </html>
