--- a/src/main/resources/templates/musicList/sellMusicListForm.html
+++ b/src/main/resources/templates/musicList/sellMusicListForm.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: head}"/>
-<div th:replace="~{fragments/header :: header ('sellList')}"/>
-<div style="height: 1000px">
+<div th:replace="~{fragments/header :: header ('sinupComplete')}"/>
 
- 판매리스트 출력하기
-
-
+<div class="container" style="margin-top: 20px; height: 1000px" >
+ <h1>구매 성공 </h1>
 </div>
 <div th:replace="~{fragments/footer :: footer}"/>
+
 </html>
