--- a/src/main/resources/templates/musicList/sellMusicListForm.html
+++ b/src/main/resources/templates/musicList/sellMusicListForm.html
@@ -1,11 +1,113 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: head}"/>
-<div th:replace="~{fragments/header :: header ('sinupComplete')}"/>
+<div th:replace="~{fragments/header :: header ('sellList')}"/>
+<style>
+    .table_row_color:hover {
+        background-color: lightgray;
+    }
 
-<div class="container" style="margin-top: 20px; height: 1000px" >
- <h1>구매 성공 </h1>
+    .table_title_fontcolor:hover {
+        background-color: lightgray;
+        color: darkviolet !important;
+        cursor: pointer;
+    }
+</style>
+<body>
+<div>
+    <div class="container">
+        <form class="row g-2" style="margin-top: 20px">
+            <div class="col-auto">
+                <select class="form-select">
+                    <option selected>정렬선택</option>
+                    <option>낮은가격순</option>
+                    <option>높은가격순</option>
+                    <option>악보제목순</option>
+                </select>
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">확인</button>
+            </div>
+            <div class="col-auto" style="margin-left: 100px">
+                <button type="button" class="btn btn-primary">총 판매금액 =</button>
+            </div>
+            <div class="col-auto">
+                <button type="button" class="btn btn-primary"
+                        th:if="${member != null}" th:text="${member.revenue} + '원'"></button>
+            </div>
+        </form>
+
+        <div style="max-height: 700px; min-height: 700px; overflow: scroll;">
+            <table class="table table-striped table-bordered">
+                <thead>
+                <tr>
+                    <th>판매일</th>
+                    <th>곡제목</th>
+                    <th>구매자Id</th>
+                    <th>악기</th>
+                    <th>난이도</th>
+                    <th>가격</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr class="table_row_color" th:each="musicList : ${paging}">
+                    <td style="width: 10%" th:text="${musicList.localDate}"></td>
+                    <td style="width: 50%" th:text="${musicList.musicList.title}" class="table_title_fontcolor"
+                        th:onclick="|location.href='@{/content (musicListId=${musicList.musicList.id}) }'|"></td>
+                    <td th:text="${musicList.buyMemberLoginId}"></td>
+                    <td style="width: 8%" th:text="${musicList.musicList.type}"></td>
+                    <td style="width: 8%" th:text="${musicList.musicList.level}"></td>
+                    <td style="width: 8%" th:text="${musicList.musicList.price}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </div>
+
 </div>
-<div th:replace="~{fragments/footer :: footer}"/>
 
+
+<ul class="pagination justify-content-center">
+    <li class="page-item" th:if="${start==0}">
+        <a class="page-link" th:href="@{|?page=${start}|}"> << </a>
+    </li>
+    <li class="page-item" th:if="${start!=0}">
+        <a class="page-link" th:href="@{|?page=${start -1}|}"> << </a>
+    </li>
+    <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+        <a class="page-link" th:href="@{|?page=${paging.number -1}|}"> < </a>
+    </li>
+    <li class="page-item" th:classappend="${page == paging.number} ? 'active'"
+        th:each="page : ${#numbers.sequence(start, end)}">
+        <a class="page-link" th:text="${page+1}" th:href="@{|?page=${page}|}"></a>
+    </li>
+    <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+        <a class="page-link" th:href="@{|?page=${paging.number+1}|}"> > </a>
+    </li>
+    <li class="page-item" th:if="${paging.getTotalPages() - start < 8}">
+        <a class="page-link" th:href="@{|?page=${paging.getTotalPages() -1}|}"> >> </a>
+    </li>
+    <li class="page-item" th:if="${paging.getTotalPages() - start > 8}">
+        <a class="page-link" th:href="@{|?page=${start+7}|}"> >> </a>
+    </li>
+</ul>
+
+<form class="row g-2 justify-content-center" style="margin-bottom: 154px">
+    <div class="col-auto">
+        <select class="form-select">
+            <option selected>제목검색</option>
+            <option>글작성자</option>
+        </select>
+    </div>
+    <div class="col-3">
+        <input type="search" class="form-control" placeholder="악보를 검색하세요" aria-label="Search">
+    </div>
+
+    <div class="col-auto">
+        <button type="submit" class="btn btn-primary mb-3">확인</button>
+    </div>
+</form>
+</body>
+<div th:replace="~{fragments/footer :: footer}"/>
 </html>
