--- a/src/main/resources/templates/login/cartForm.html
+++ b/src/main/resources/templates/login/cartForm.html
@@ -6,7 +6,7 @@
 판매리스트 출력하기
 
 
-<div style="height: 1000px">
+<div style="height: 1000px; margin-top: 20px;">
 </div>
 <div th:replace="~{fragments/footer :: footer}"/>
 </html>
