--- a/src/main/resources/templates/musicList/sellMusicListForm.html
+++ b/src/main/resources/templates/musicList/sellMusicListForm.html
@@ -29,35 +29,33 @@
                 <button type="submit" class="btn btn-primary mb-3">확인</button>
             </div>
             <div class="col-auto" style="margin-left: 100px">
-                <button type="button" class="btn btn-primary">총 판매금액 =</button>
+                <button type="button" class="btn btn-primary" th:if="${member}"
+                        th:text="${'총 판매금액 = ' + member.revenue + '원'}"></button>
             </div>
-            <div class="col-auto">
-                <button type="button" class="btn btn-primary"
-                        th:if="${member != null}" th:text="${member.revenue} + '원'"></button>
-            </div>
+
         </form>
 
         <div style="max-height: 700px; min-height: 700px; overflow: scroll;">
             <table class="table table-striped table-bordered">
                 <thead>
                 <tr>
-                    <th>판매일</th>
-                    <th>곡제목</th>
-                    <th>구매자Id</th>
-                    <th>악기</th>
-                    <th>난이도</th>
-                    <th>가격</th>
+                    <th style="width: 11%">판매일</th>
+                    <th style="width: 45%">곡제목</th>
+                    <th style="width: 15%">구매자Id</th>
+                    <th style="width: 7%">악기</th>
+                    <th style="width: 7%">난이도</th>
+                    <th style="width: 9%">가격</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr class="table_row_color" th:each="musicList : ${paging}">
-                    <td style="width: 10%" th:text="${musicList.localDate}"></td>
-                    <td style="width: 50%" th:text="${musicList.musicList.title}" class="table_title_fontcolor"
+                    <td th:text="${musicList.localDate}"></td>
+                    <td th:text="${musicList.musicList.title}" class="table_title_fontcolor"
                         th:onclick="|location.href='@{/content (musicListId=${musicList.musicList.id}) }'|"></td>
                     <td th:text="${musicList.buyMemberLoginId}"></td>
-                    <td style="width: 8%" th:text="${musicList.musicList.type}"></td>
-                    <td style="width: 8%" th:text="${musicList.musicList.level}"></td>
-                    <td style="width: 8%" th:text="${musicList.musicList.price}"></td>
+                    <td th:text="${musicList.musicList.type}"></td>
+                    <td th:text="${musicList.musicList.level}"></td>
+                    <td th:text="${musicList.musicList.price}"></td>
                 </tr>
                 </tbody>
             </table>
@@ -67,29 +65,40 @@
 
 </div>
 
-
 <ul class="pagination justify-content-center">
-    <li class="page-item" th:if="${start==0}">
-        <a class="page-link" th:href="@{|?page=${start}|}"> << </a>
+    <li class="page-item">
+        <a class="page-link" th:if="${start==0}" th:href="@{|?page=${start}|}"> << </a>
     </li>
-    <li class="page-item" th:if="${start!=0}">
-        <a class="page-link" th:href="@{|?page=${start -1}|}"> << </a>
+    <li class="page-item">
+        <a class="page-link" th:if="${start>0}" th:href="@{|?page=${start -1}|}"> << </a>
     </li>
+
     <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
         <a class="page-link" th:href="@{|?page=${paging.number -1}|}"> < </a>
     </li>
+
     <li class="page-item" th:classappend="${page == paging.number} ? 'active'"
         th:each="page : ${#numbers.sequence(start, end)}">
         <a class="page-link" th:text="${page+1}" th:href="@{|?page=${page}|}"></a>
     </li>
+
     <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
         <a class="page-link" th:href="@{|?page=${paging.number+1}|}"> > </a>
     </li>
-    <li class="page-item" th:if="${paging.getTotalPages() - start < 8}">
-        <a class="page-link" th:href="@{|?page=${paging.getTotalPages() -1}|}"> >> </a>
+
+    <li class="page-item">
+        <a class="page-link" th:if="${paging.getTotalPages() == 0}"
+           th:href="@{|?page=${paging.getTotalPages()}|}"> >> </a>
     </li>
-    <li class="page-item" th:if="${paging.getTotalPages() - start > 8}">
-        <a class="page-link" th:href="@{|?page=${start+7}|}"> >> </a>
+
+    <li class="page-item">
+        <a class="page-link" th:if="${paging.getTotalPages() != 0}"
+           th:href="@{|?page=${paging.getTotalPages()-1}|}"> >> </a>
+    </li>
+
+    <li class="page-item">
+        <a class="page-link" th:if="${paging.getTotalPages() - start > 6}"
+           th:href="@{|?page=${start+7}|}"> >> </a>
     </li>
 </ul>
 
